@@ -107,6 +107,7 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED',
+                '--add-exports', 'javafx.controls/com.sun.javafx.charts=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
     ]
     
@@ -142,7 +143,7 @@ jar {
             'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
             'Build-OS'       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}",
             'App-Name'       : "GPXEditor",
-            'App-Version'    : "4.2",
+            'App-Version'    : "4.3",
             'App-URL'        : "https://github.com/ThomasDaheim/GPXEditor"
         )
     }
